--- a/vignettes/Basic_calibration.Rmd
+++ b/vignettes/Basic_calibration.Rmd
@@ -26,25 +26,25 @@ First, let's define the target we are trying to match to. In this instance, we
 want to match to prevalence in 2-10 year olds at two time points:
 
 ```{r}
-# Define target, here two prevalence measures:
-target <- c(0.3, 0.3)
-# Time points at which to match target
-target_tt <- c(500, 600)
+# Define target, here a prevalence measures:
+target <- 0.3
 ```
 
 You must supply a summary function when calibrating. This function takes the raw
-model output and returns a vector (of length timesteps), of your target variable.
-For PfPr 2-10, we have a helper function for this `summary_pfpr_2_10()`.
+model output and returns a vector (of length target), of your target variable.
+For PfPr 2-10, we have an example helper function that summarises mean
+prevalence `summary_mean_pfpr_2_10()`.
 
 We also need to set up all other aspects of our simulation. In this case, we will
 set up a very basic model run:
 
 ```{r}
-parameters <- get_parameters(list(human_population = 1000))
+parameters <- get_parameters(list(human_population = 5000, individual_mosquitoes = FALSE))
+parameters$timesteps <- 365 * 3
 ```
 
-Now time for the calibration. Here we set the tolerance to 0.02. This means that
-the distance between each target value and model output prevalence needs to be <2%. The
+Now time for the calibration. Here we set the tolerance to 0.005. This means that
+the distance between each target value and model output prevalence needs to be <0.5%. The
 tolerance is specified in the unit of the target variable. We also cheat a bit here
 and put a tight bound on the EIR to search to help speed up this code.
 
@@ -52,24 +52,23 @@ and put a tight bound on the EIR to search to help speed up this code.
 set.seed(123)
 out <- calibrate(parameters = parameters,
                  target = target,
-                 target_tt = target_tt,
-                 summary_function = summary_pfpr_2_10,
-                 tolerance = 0.02, 
-                 interval = c(1, 6))
+                 summary_function = summary_mean_pfpr_2_10,
+                 tolerance = 0.01, 
+                 interval = c(3, 5))
 ```
 
 Ok, we've calibrated. Lets run the calibrated model and see how we did.
 
 ```{r}
 parameters <- set_equilibrium(parameters, init_EIR = out$root)
-raw <- run_simulation(timesteps = max(target_tt) + 100, parameters = parameters)
-pfpr <- summary_pfpr_2_10(raw)
+raw <- run_simulation(parameters$timesteps + 100, parameters = parameters)
+pfpr <- raw$n_detect_730_3650 / raw$n_730_3650
 
-pd <- data.frame(time = 1:(max(target_tt) + 100), pfpr = pfpr)
+pd <- data.frame(time = 1:(parameters$timesteps + 100), pfpr = pfpr)
 
 ggplot() +
+  geom_hline(yintercept = target, col = "dodgerblue", lty = 2) + 
   geom_line(data = pd, aes(x = time, y = pfpr), col = "deeppink", size = 1) +
-  geom_point(aes(x = target_tt, y = target), col = "dodgerblue", size = 4) + 
   ylim(0, 1) +
   theme_bw()
 
@@ -88,6 +87,9 @@ If you are struggling to get the calibrate function to work, try checking:
 
 1. That your `summary_function` works. The easiest way to do this is to run a single
 model run with the same parameters and then run your `summary_function()` on the output.
-2. Check you're providing a reasonable `interval` (range of EIRs) and `tolerance` for fitting.
-3. Make sure you're familiar with the `stats::uniroot()` function and additional set-up and
+2. That you're providing a reasonable `interval` (range of EIRs) and `tolerance` for fitting.
+3. That you're population size is large enough that stochasticity in ther results isn't
+too influential.
+
+Finally, make sure you're familiar with the `stats::uniroot()` function and additional set-up and
 tuning arguments.
