--- a/vignettes/Basic_calibration.Rmd
+++ b/vignettes/Basic_calibration.Rmd
@@ -54,13 +54,13 @@ out <- calibrate(parameters = parameters,
                  target = target,
                  summary_function = summary_mean_pfpr_2_10,
                  tolerance = 0.01, 
-                 interval = c(3, 5))
+                 low = 3, high = 5)
 ```
 
 Ok, we've calibrated. Lets run the calibrated model and see how we did.
 
 ```{r}
-parameters <- set_equilibrium(parameters, init_EIR = out$root)
+parameters <- set_equilibrium(parameters, init_EIR = out)
 raw <- run_simulation(parameters$timesteps + 100, parameters = parameters)
 pfpr <- raw$n_detect_730_3650 / raw$n_730_3650
 
