--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(
 [![Project Status: WIP – Initial development is in progress, but there has not yet been a stable, usable release suitable for the public.](https://www.repostatus.org/badges/latest/wip.svg)](https://www.repostatus.org/#wip)
 [![R-CMD-check](https://github.com/mrc-ide/cali/workflows/R-CMD-check/badge.svg)](https://github.com/mrc-ide/cali/actions)
 [![Coverage status](https://codecov.io/gh/mrc-ide/cali/branch/main/graph/badge.svg)](https://codecov.io/github/mrc-ide/cali)
+[![R-CMD-check](https://github.com/mrc-ide/cali/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/mrc-ide/cali/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 Use cali to calibrate [individual](https://mrc-ide.github.io/individual/) model output to a specific target. 
